--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>relaxmap-front</title>
-    <link rel="icon" type="image/x-icon" href="/assets/logo.png" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" /> -->
+
+    <link
+      id="dynamic-favicon"
+      rel="icon"
+      type="image/svg+xml"
+      href="assets/logo.svg"
+    />
+
   </head>
   <body>
     <div id="root"></div>
